<resources>
    <string name="app_name">Trejnado</string>
    <string name="action_settings">Settings</string>
    <string name="machine_name">Gerätebezeichnung</string>
    <string name="programlist">Trainingsprogramme</string>
    <string name="text_machine_settings">Geräteeinstellungen</string>
    <string name="text_machine">Gerät</string>
    <string name="title_activity_play_session">PlaySessionActivity</string>
    <string name="text_weight">Gewicht</string>
    <string name="text_time">Zeit</string>
    <string name="text_lasttime">letztes Mal</string>
    <string name="text_stopwatch">Stoppuhr</string>
    <string name="text_yes">Ja</string>
    <string name="text_no">Nein</string>
    <string name="text_dialog_session_end">Möchtest Du die Trainingssession beenden?</string>
    <string name="text_dialog_session_pause">Möchtest Du die Trainingssession pausieren?</string>
    <string name="text_dialog_session_exists">Es existiert eine gestartete und nicht beendete Trainingssession vom %s.
        Möchtest Du diese fortfahren?
    </string>
    <string name="text_dialog_session_end_exists">Möchtest Du die bestehende Trainingssession beenden?</string>
    <string name="title_activity_machine_add">MachineAddActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">Speichern</string>
</resources>
