<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_play_session"
        tools:context=".gui.PlaySessionActivity">

    <TextView
            android:text="@string/text_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/left_space"/>
    <TextView
            android:text="E 2.1"
            style="@style/MachineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/textView2"
    />
    <TextView
            android:text="@string/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/left_space"/>
    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="textPersonName"
            android:text="100"
            android:ems="4"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" style="@style/MachineInput"/>
    <TextView
            android:text="@string/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/editText"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="90"
            android:ems="3"
            android:id="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText" style="@style/MachineInput"
    />
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_end="319dp"/>
    <TextView
            android:text="@string/text_lasttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="@+id/left_space"
    />
    <TextView
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:textAppearance="@style/MachineValues"
            app:layout_constraintStart_toStartOf="@+id/left_space"/>
    <TextView
            android:text="@string/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/left_space"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="@string/text_time"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/textView9" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="@+id/textView8"/>
    <TextView
            android:text="90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:textAppearance="@style/MachineValues"
            app:layout_constraintStart_toStartOf="@+id/textView9"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/left_space" app:layout_constraintGuide_begin="16dp"
                                          android:orientation="vertical"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/editText2"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:elevation="0dp"
            android:backgroundTint="@color/accent_material_light"/>
    <TextView
            android:text="@string/text_stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/guideline3"/>
    <TextView
            android:text="@string/text_machine_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="64dp"/>
    <FrameLayout
            android:layout_width="227dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12">
        <include layout="@layout/machine_settings_view" android:layout_height="250dp"
                 android:layout_width="match_parent"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>